--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^5.8.2",
     "postcss": "^8.5.6",
     "prisma": "^6.10.1",
+    "puppeteer": "^24.11.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3"
